--- a/package.json
+++ b/package.json
@@ -9,30 +9,32 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@auth/core": "0.18.1",
-    "@auth/prisma-adapter": "1.0.6",
+    "@auth/core": "^0.37.4",
+    "@auth/prisma-adapter": "^2.7.4",
     "@prisma/client": "^6.6.0",
-    "@radix-ui/react-slot": "^1.2.0",
+    "@radix-ui/react-avatar": "^1.1.11",
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
+    "@radix-ui/react-slot": "^1.2.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "lucide-react": "^0.503.0",
-    "next": "15.3.1",
-    "next-auth": "5.0.0-beta.3",
+    "lucide-react": "^0.469.0",
+    "next": "16.1.0",
+    "next-auth": "5.0.0-beta.30",
     "prisma": "^6.6.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "tailwind-merge": "^3.2.0"
+    "tailwind-merge": "^3.2.3"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "^4",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "eslint": "^9",
-    "eslint-config-next": "15.3.1",
-    "tailwindcss": "^4",
+    "@eslint/eslintrc": "^3.2.0",
+    "@tailwindcss/postcss": "^4.1.0",
+    "@types/node": "^22.10.5",
+    "@types/react": "^19.0.6",
+    "@types/react-dom": "^19.0.3",
+    "eslint": "^9.17.0",
+    "eslint-config-next": "16.1.0",
+    "tailwindcss": "^4.1.0",
     "tw-animate-css": "^1.2.8",
-    "typescript": "^5"
+    "typescript": "^5.7.2"
   }
 }
