--- a/package.json
+++ b/package.json
@@ -13,11 +13,12 @@
     "@auth/core": "^0.37.4",
     "@auth/prisma-adapter": "^2.7.4",
     "@prisma/client": "^6.6.0",
+    "@radix-ui/react-alert-dialog": "^1.1.15",
     "@radix-ui/react-avatar": "^1.1.11",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-label": "^2.1.8",
-    "@radix-ui/react-slot": "^1.2.1",
+    "@radix-ui/react-slot": "^1.2.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.469.0",
