--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "prisma": "^6.6.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^3.2.3",
     "zod": "^4.2.1"
   },
