--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "bcryptjs": "^3.0.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "dotenv": "^17.2.3",
     "lucide-react": "^0.469.0",
     "next": "16.1.0",
     "next-auth": "5.0.0-beta.30",
